--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
   },
