--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^3.0.0",
